# ga-knapsack-optuna-hydra

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
